added notification component & implemented it when completeing a habit or achievement

--- a/Gamified Habit Tracker Blazor.Client/Layout/DefNotTheMainLayout.razor
+++ b/Gamified Habit Tracker Blazor.Client/Layout/DefNotTheMainLayout.razor
@@ -6,10 +6,10 @@
     {
         <div class="nav-bar">
             <ul class="nav-list">
-                <li><a href="achievements" class="@MakeClassActive("achievements")">Achievements</a></li>
-                <li><a href="habits" class="@MakeClassActive("habits")">Habits</a></li>
-                <li><a href="profile" class="@MakeClassActive("profile")">Profile</a></li>
-                <li><a href="Experience" class="@MakeClassActive("Experience")">Experience</a></li>
+                <li><a href="achievements">Achievements</a></li>
+                <li><a href="habits">Habits</a></li>
+                <li><a href="profile">Profile</a></li>
+                <li><a href="Experience">Experience</a></li>
                 <li><Logout  /></li>
 
             </ul>
@@ -20,7 +20,6 @@
     <main>
 
         <article class="content ">
-            @MakeClassActive("Experience")
             @Body
         </article>
     </main>
@@ -39,14 +38,6 @@
             var currentUri = Nav.Uri.ToLower();
             return currentUri.Contains("/login");
         }
-        public void MakeClassActive(string Class)
-        {
-            var currentUri = Nav.Uri.ToLower();
-            if (currentUri.Contains(Class.ToLower())){
-                return "active";
-            }
-            return Class;
-    }
+       
 
-   
 }
