--- a/Gamified Habit Tracker Blazor.Client/Pages/Home.razor
+++ b/Gamified Habit Tracker Blazor.Client/Pages/Home.razor
@@ -1,6 +1,7 @@
 ﻿@inject NavigationManager Nav
 @inject AuthenticationStateProvider _authState
 @rendermode @(new InteractiveWebAssemblyRenderMode(prerender:false))
+@layout Layout.DefNotTheMainLayout
 @page "/"
 
 @code{
