--- a/Gamified Habit Tracker Blazor.Client/Pages/Profile.razor
+++ b/Gamified Habit Tracker Blazor.Client/Pages/Profile.razor
@@ -22,10 +22,10 @@
 		</div>
 		<br />
 		<br />
-		<h2>You have <span class="blue">@user.ExpPoints</span> Exp points</h2>
-		<h2>Your current level is  <span class="orange">@user_lvl.Name</span> </h2>
-		<h2>the next level requires <span class="blue">@user_lvl.ExperiencePoints</span> Exp points </h2>
-		<h2>You need only <span class="blue">@(user_lvl.ExperiencePoints - user.ExpPoints)</span> Exp points more </h2>
+		<h2>You have <span class="yellow">@user.ExpPoints</span> Exp points</h2>
+		<h2>Your current level is  <span class="blue">@user_lvl.Name</span> </h2>
+		<h2>the next level requires <span class="yellow">@user_lvl.ExperiencePoints</span> Exp points </h2>
+		<h2>You need only <span class="yellow">@(user_lvl.ExperiencePoints - user.ExpPoints)</span> Exp points more </h2>
 		<br />
 		<br />
 		
