--- a/Gamified Habit Tracker Blazor.Client/Pages/Habits.razor.css
+++ b/Gamified Habit Tracker Blazor.Client/Pages/Habits.razor.css
@@ -9,7 +9,7 @@
     position: fixed;
     width: 100%;
     height: 101vh;
-    overflow: hidden;
+    overflow: auto;
     top: 50%;
     left: 50%;
     z-index: -1;
@@ -18,7 +18,9 @@
     text-align: center;
     color: rgb(238, 238, 238);
 }
-
+.Habits-page::-webkit-scrollbar{
+    display: none;
+}
 .skip-button {
     font-size : 22px;
     width: 150px;
