--- a/Gamified Habit Tracker Blazor.Client/Pages/Profile.razor.css
+++ b/Gamified Habit Tracker Blazor.Client/Pages/Profile.razor.css
@@ -1,12 +1,13 @@
 ﻿.profile-page {
-    background-image: url("Assets/habits-bg.jpg");
+    background-image: url("Assets/gold-moon.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    overflow: auto;
     position: fixed;
     width: 100%;
     height: 101vh;
-    overflow: hidden;
+
     top: 50%;
     left: 50%;
     z-index: -1;
@@ -32,15 +33,15 @@
 .golden{
     color :  gold;
 }
-.blue {
-    color: deepskyblue;
+.yellow {
+    color: yellow;
 }
 .red {
-    color: tomato;
+    color: red;
 }
 .green {
     color: lawngreen;
 }
-.orange{
-    color : orange;
+.blue{
+    color : deepskyblue;
 }
